--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,52 +1,162 @@
 ---
-import Layout from '../layouts/Layout.astro';
-const pageTitle = "Milky-Way";
+import Layout from "../layouts/Layout.astro";
+const pageTitle = "Manuj Dixit";
 ---
-<Layout pageTitle={pageTitle}>
-    <div class="gif">
-        <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp"/>
-    </div>
-    <h1>Milky-Way</h1>
-    <span class="badge">Digital Craftsman (Developer)</span>
-    <h2>About</h2>
-    <p>
-        Praesent malesuada mi nisi, quis tempus magna venenatis ut.
-        Suspendisse tempor sem at scelerisque congue. Curabitur mollis,
-        mi id molestie finibus, metus sem sagittis nunc, euismod feugiat orci neque non lorem.
-        Aenean sollicitudin erat eu molestie tempus. Nunc ac eros elementum, fermentum lacus at,
-        pellentesque mauris. Suspendisse eros neque, interdum euismod consectetur convallis,
-        porttitor at massa. Phasellus a ultrices arcu. Donec viverra, lorem in pellentesque euismod,
-        libero justo gravida nibh, non ultricies justo purus ultrices est.
-    </p>
-    <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
-    </p>
-    <div class="center">
-        <a href="/works/">
-            <button class="btn">My portfolio</button>
-        </a>
-    </div>
-    <h2>Skills</h2>
-    <div class="skills center">
-        <img class="skills__img" width="46" height="46" alt="C#" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="DotNetCore" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="TypeScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Angular" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Bootstrap" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="CSS" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="HTML" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="JavaScript" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
-        <img class="skills__img" width="46" height="46" alt="Git" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg"/>
-    </div>
-    <h2>Interests</h2>
-    <p>
-        Ut at interdum dui. Donec ut ante ex. Maecenas id ex eget nibh consequat accumsan.
-        Proin semper semper dui nec feugiat. Donec cursus neque id aliquet finibus. Morbi
-        facilisis turpis nibh, nec dictum orci dictum nec. In hac habitasse platea dictumst.
-        Maecenas mollis turpis vitae turpis bibendum, vitae tristique arcu eleifend.
-    </p>
-</Layout>
 
+<Layout pageTitle={pageTitle}>
+  <div class="gif">
+    <img width="300" height="259" alt="RaccoonSpaceGif" src="/space.webp" />
+  </div>
+  <h1>Manuj Dixit</h1>
+  <span class="badge">Digital Craftsman (Developer & Designer)</span>
+  <span class="badge">Maths Enthusiast</span>
+  <span class="badge">A Chill Guy 🐼</span>
+  <h2>About</h2>
+  <p>
+    Hi, I’m Manuj Dixit, a passionate freelance web developer and aspiring AI
+    innovator. With a solid foundation in programming and an ongoing journey
+    into the fascinating world of machine learning, I aim to blend creativity
+    and technology to solve real-world problems.
+  </p>
+  <p>
+    Currently, I specialize in creating responsive, user-friendly websites and
+    applications that help businesses and individuals establish a strong digital
+    presence. At the same time, I’m diving deep into the fields of artificial
+    intelligence and data science, with the goal of building an AI research lab
+    dedicated to driving innovation and making AI more accessible.
+  </p>
+  <p>
+    My approach combines attention to detail, a drive for continuous learning,
+    and a focus on delivering impactful solutions. Whether it's crafting a
+    seamless web experience or exploring AI-driven tools, I’m committed to
+    bringing ideas to life through technology.
+  </p>
+  <p>
+    When I’m not coding, you’ll find me exploring the latest advancements in AI,
+    contributing to open-source projects, or brainstorming ideas for my future
+    lab.
+  </p>
+  <p>Let's collaborate and bring your digital visions to life!</p>
+  <div class="center">
+    <a href="/works/">
+      <button class="btn">My portfolio</button>
+    </a>
+  </div>
+  <h2>Skills</h2>
+  <div class="skills center">
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg"
+    />
+
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg"
+    />
+
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"
+    />
+
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/go/go-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/firebase/firebase-plain-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://prismalens.vercel.app/header/logo-white.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postman/postman-plain-wordmark.svg"
+    />
+    <img
+      class="skills__img"
+      width="46"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/amazonwebservices/amazonwebservices-plain-wordmark.svg"
+    />
+  </div>
+  <h2>Interests</h2>
+  <p>
+    I’m deeply passionate about technology, particularly in the fields of
+    artificial intelligence and machine learning. The prospect of solving
+    real-world problems through intelligent systems inspires me, and I aspire to
+    establish an AI research lab to drive innovation. Alongside AI, I enjoy web
+    development, creating seamless and user-focused digital experiences. My
+    curiosity keeps me exploring cloud computing, DevOps tools like Docker and
+    AWS, and contributing to open-source projects, which I believe foster
+    collaboration and growth.
+  </p>
+  <p>
+    Outside of tech, I find joy in gaming, staying updated on emerging trends,
+    and exploring sustainable solutions that merge technology and environmental
+    responsibility.
+  </p>
+</Layout>
